# nowtoday

./: .cursorrules  .gitignore  .replit  README.md  app.py  components.json  final_script.md  gitandrun.sh  history.md  next.config.js  package-lock.json  package.json  pyproject.toml  replit.nix  scrape_https_news.ycombinator.com_.md  script.md  server.js  summary.md  tailwind.config.ts
backend/: content_refiner.py  heygen.py  https_news.ycombinator.com_.md  jina.py  main.py  openai_utils.py  scrape.md  scrape_https_news.ycombinator.com_.md  script.md  settings.py  summary.md  url_validator.py  video_generator.py  web_scraper.py
backend/venv_superdash/: pyvenv.cfg
paths/: SuperDashboard.md  TechStackDeeets.md  nowtoday.md
scripts/: generate_chart.py
src/: history.md
src/app/: layout.tsx
src/app/api/charts/[id]/: route.ts
src/app/components/: Dashboard.tsx  SignInWithGoogle.tsx  Tile.tsx  oldDashboard.tsx
src/lib/: constants.ts
src/lib/contexts/: AuthContext.tsx
src/lib/firebase/: firebase.ts  firebaseUtils.ts
src/lib/hooks/: useAuth.ts
