[tool.poetry]
name = "SuperDashboard"
version = "0.1.0"
description = ""
authors = ["Alex Krause <a19grey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-cors = "^3.0.10"
requests = "^2.31.0"
openai = "^1.51.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
